--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,20 @@
 /* for mobile phones */
-html, body{
-  width: 100%;
+html, body, .container{
   height: 100%;
 }
 
-img {
+imglogo {
   width: 100%;
   height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header {
   color: white;
   text-align: center;
   font-family: Ubuntu;
+  position: relative;
 }
 
 .headerhours{
@@ -45,4 +47,9 @@ img {
 .navbar {
   background-color: #FFC267;
   margin: 0;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 0;
 }
