--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,20 +1,18 @@
 /* for mobile phones */
-html, body, .container{
+html, body{
+  width: 100%;
   height: 100%;
 }
 
-imglogo {
+img {
   width: 100%;
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .header {
   color: white;
   text-align: center;
   font-family: Ubuntu;
-  position: relative;
 }
 
 .headerhours{
@@ -47,9 +45,4 @@ imglogo {
 .navbar {
   background-color: #FFC267;
   margin: 0;
-}
-
-.copyright {
-  position: absolute;
-  bottom: 0;
 }
