--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,17 @@
 html, body{
   width: 100%;
   height: 100%;
+  gutter-width: 0;
+}
+
+#sidebar {
+  background-color: black;
+  height: 100vh;
+  border: 2px solid red;
+  color: white;
+  text-align: center;
+  font-family: Ubuntu;
+  padding; 0;
 }
 
 img {
@@ -9,25 +20,18 @@ img {
   height: auto;
 }
 
-.header {
-  color: white;
-  text-align: center;
-  font-family: Ubuntu;
-}
-
 .headerhours{
   background-color: #212121;
-  padding: 2em 1em 1em 1em;
   height: 180px;
-  border: 2px solid red;
+  overflow: hidden;
 }
 
 .headerhours-open{
   background-color: #A62929;
-  display: inline;
   padding: 2px 20px 2px 20px;
   font-size: 1.5em;
   font-weight: 700;
+  margin-top: 20px;
 }
 
 .headerhours-time{
@@ -38,8 +42,11 @@ img {
 .catering{
   background-color: #3B476D;
   height: 100px;
-  font-size: 50px;
-  padding-top: 5px;
+  padding: 8px;
+}
+
+.catering h1{
+  font-size: 1.5em;
 }
 
 .navbar {
